# SignalPeak

./: .gitignore  README.md  pyproject.toml
signalpeak/cli/: main.py
signalpeak/domain/: predictor.py  signal.py
signalpeak/domain/indicators/: __init__.py  base_indicator.py  derivative.py  gaussian.py  polynomial.py
signalpeak/infrastructure/: data_loader.py  plotter.py
